# lobechat-aws

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  HOMEWORK.md  INSTALLATION.md  README.md  commitlint.config.js  docker-compose.yml  pyproject.toml
.githooks/: commit-msg
.github/workflows/: build-publish.yml  ci.yml  commitlint.yml  deploy.yml  release.yml
ansible/: inventory.yml.template  playbook.yml
config/: casdoor-app.conf  init-postgres.sql  mcp_settings.json
db/: migrate  schema.sql
db/flyway/: .env.flyway.example  README.md  provision.sh  render.py  scrub.py
db/flyway/casdoor/: V1__baseline_schema.sql  V2__baseline_seed.sql
db/flyway/litellm/: V1__baseline_schema.sql  V2__baseline_seed.sql
db/migrations/: 20250129000000_example.sql
dockerfiles/: mcphub.Dockerfile  sandbox.Dockerfile
docs/: ARCHITECTURE.md  CI-CD.md  FINAL-PROJECT.md  HOMEWORK.md  INSTALLATION.md  agent-cloud-diagrams.md  agent-rag-sage.md  architecture.drawio  commitlint-workflow-steps.drawio  dataflow.drawio  lobechat-assistants.md  mcp-d2.md  mcp-diagrams.md  mcp-linux-sandbox.md  mcp-onboarding.md  pipeline-overview.drawio  screenshot_assistant.md  student-qa.md
docs/diagrams/: architecture.drawio  ci-fails.drawio  ci-workflow-steps.drawio  deployment-workflow.drawio  job-dependencies.drawio  release-workflow-steps.drawio  workflow-interaction.drawio
docs/evidence/: REPORT.md
docs/rag-demo/: README.md  index_docs.py  index_docs_fastembed.py  query.py
infra/: cloudformation.yml
tests/: __init__.py  test_vllm.py
(+10 files in other folders)
