[project]
name = "lobechat-aws"
version = "0.4.1"
description = "Self-hosted LobeChat stack with PostgreSQL, Casdoor, and MinIO"
readme = "README.md"

[dependency-groups]
dev = [
    "commitizen>=4.12.0",
]
test = [
    "pytest>=8.0.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.4.1"
version_files = [
    "pyproject.toml:^version"
]
tag_format = "v$version"
update_changelog_on_bump = true
major_version_zero = true
