[project]
name = "lobechat-aws"
version = "5.0.1"
description = "Deploy LobeChat to AWS using CloudFormation and Ansible"
requires-python = ">=3.11"
dependencies = [
    "ansible>=11.0.0",
]

[tool.uv]
dev-dependencies = [
    "commitizen>=4.0.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "5.0.1"
version_files = ["pyproject.toml:^version"]
tag_format = "v$version"
update_changelog_on_bump = false
major_version_zero = false
